--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Cinemia
-
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
-
+spring.app.jwtSecret=ensargokmertgulerhabilcobanosmanorcunaydin123456789
+spring.app.jwtExpirationMs=999999999
+spring.ecom.app.jwtCookieName=Cinemia
