refac: renamed project to 'Listopia' from 'Cinemia'.
As we agreed with the name, it is better to change it now before is it harder to change

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.savt</groupId>
-	<artifactId>cinemia</artifactId>
+	<artifactId>listopia</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Cinemia</name>
-	<description>Cinemia project</description>
+	<name>Listopia</name>
+	<description>Listopia project</description>
 	<url/>
 	<licenses>
 		<license/>
