--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
 spring.application.name=Listopia
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/listopiaBackend
+spring.datasource.username=postgres
+spring.datasource.password=savt123
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
+
+backdrops.path=images/backdrops
+posters.path=images/posters
+logos.path=images/logos
+
+
 spring.app.jwtSecret=ensargokmertgulerhabilcobanosmanorcunaydin123456789
 spring.app.jwtExpirationMs=999999999
 spring.ecom.app.jwtCookieName=Listopia
