--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>uk.co.conoregan</groupId>
+			<artifactId>themoviedbapi</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
