job: basic user management utils.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
 spring.application.name=Listopia
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/listopiaBackend
-spring.datasource.username=postgres
-spring.datasource.password=savt123
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.profiles.active=dev
 
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true
