--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=savt123
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+springdoc.api-docs.enabled=false
