--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/listopia
+spring.datasource.url=jdbc:postgresql://188.132.197.84:5432/listopia
 spring.datasource.username=postgres
 spring.datasource.password=savt123
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 springdoc.api-docs.enabled=false
