--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:21-jdk
-ARG JAR_FILE=*.jar
+ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} listopia.jar
 ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "listopia.jar"]
