fix syntax error

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,6 @@
-sspring.datasource.url=jdbc:postgresql://localhost:5432/listopia
+spring.datasource.url=jdbc:postgresql://localhost:5432/listopia
 spring.datasource.username=postgres
 spring.datasource.password=savt123
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.properties.hibernate.jdbc.batch_size=100
-spring.jpa.properties.hibernate.order_inserts=true
