--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,19 @@
 name: Deploy Workflow
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["Test Workflow"]
+    types: [completed]
+    branches: [main]
 
 jobs:
   build-and-deploy:
     name: Build and Deploy
     if: >
-      ${{ github.event.workflow_run.conclusion == 'success' &&
-          !contains(github.event.workflow_run.head_commit.message, 'ci:false') }}
+      ${{
+        github.event.workflow_run.conclusion == 'success' &&
+        !contains(github.event.workflow_run.head_commit.message, 'ci:false')
+      }}
 
     runs-on: ubuntu-latest
 
