fix: properties moved to prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 springdoc.api-docs.enabled=false
 
 server.forward-headers-strategy=native
+server.servlet.session.cookie.same-site=none
+
+recaptcha.verifyUrl=https://www.google.com/recaptcha/api/siteverify
+recaptcha.secretKey=${RECAPTCHA_SECRET}
