fix: properties fix

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,3 +11,5 @@ server.servlet.session.cookie.same-site=none
 
 recaptcha.verifyUrl=https://www.google.com/recaptcha/api/siteverify
 recaptcha.secretKey=${RECAPTCHA_SECRET}
+
+tmdb.apiKey=${TMDB_APIKEY}
