--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,7 @@ backdrops.path=images/backdrops
 posters.path=images/posters
 logos.path=images/logos
 
-spring.app.jwtSecret=ensargokmertgulerhabilcobanosmanorcunaydin123456789
-spring.app.jwtExpirationMs=999999999
-spring.ecom.app.jwtCookieName=Listopia
-
-tmdb.apiKey=${TMDB_APIKEY}
+tmdb.apiKey=
 
 recaptcha.verifyUrl=
 recaptcha.secretKey=
