--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
             docker stop listopia-app || true
             docker rm listopia-app || true
             docker rmi listopia-app || true
-            docker build -f deploy/Dockerfile -t listopia-app . || true
+            docker build -f deploy/Dockerfile -t listopia-app .
             docker run -d \
               --name listopia-app \
               -p 8080:8080 \
